2012-05-09  Kent Tamura  <tkent@chromium.org>

        [Chromium] Disable WebViewTest.TextInputType because the test is incomplete.

        * tests/WebViewTest.cpp:

2012-05-09  Kent Tamura  <tkent@chromium.org>

        [Chromium] Some of *.runMultiThread tests intermittently crash.
        Mark them flaky.

        * tests/CCLayerTreeHostTest.cpp:

2012-05-09  Oli Lan  <olilan@chromium.org>

        Adds date/time input types to WebTextInputType, and adds support for these
        to WebViewImpl.textInputType().

        Adds a new test WebViewTest.TextInputType to test WebViewImpl.textInputType(),
        including the new types.

        https://bugs.webkit.org/show_bug.cgi?id=78746

        Reviewed by Kent Tamura.

        * public/WebTextInputType.h:
        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::textInputType):
        * tests/WebViewTest.cpp:
        (WebViewTest):
        (WebKit::WebViewTest::testTextInputType):
        (WebKit):
        (WebKit::TEST_F):
        * tests/data/input_field_date.html: Added.
        * tests/data/input_field_datetime.html: Added.
        * tests/data/input_field_default.html: Added.
        * tests/data/input_field_email.html: Added.
        * tests/data/input_field_number.html: Added.
        * tests/data/input_field_search.html: Added.
        * tests/data/input_field_time.html: Added.
        * tests/data/input_field_week.html: Added.

2012-05-08  Jochen Eisinger  <jochen@chromium.org>

        Unreviewed.  Rolled DEPS.

        * DEPS:

2012-05-08  Dana Jansens  <danakj@chromium.org>

        [chromium] Show borders for partial-draw-culled quads to visualize culling behaviour
        https://bugs.webkit.org/show_bug.cgi?id=85414

        Reviewed by Adrienne Walker.

        * tests/CCQuadCullerTest.cpp:
        (WebCore::appendQuads):
        * tests/MockCCQuadCuller.h:
        (WebCore::MockCCQuadCuller::MockCCQuadCuller):

2012-05-08  Tony Chang  <tony@chromium.org>
